--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="C:\Users\Sherkulov\Desktop\Web projects\BISP\style.css"
-    />
+    <link rel="stylesheet" href="style.css" />
     <title>Petcare.uz</title>
   </head>
   <body>
     <div id="header">
       <div class="container">
         <img src="pics\Logo.png" alt="logo" />
+        <ul>
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">For adopters</a>
+          </li>
+          <li>
+            <a href="#">Services</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
