--- a/index.html
+++ b/index.html
@@ -6,26 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Petcare.uz</title>
+    <script
+      src="https://kit.fontawesome.com/56fa1ef7a3.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="header">
       <div class="container">
-        <img src="pics\Logo.png" alt="logo" />
-        <ul>
-          <li>
+        <img class="logo" src="pics\Logo.png" alt="logo" />
+        <ul class="navbar">
+          <li class="menu">
             <a href="#">Home</a>
           </li>
-          <li>
+          <li class="menu">
             <a href="#">About</a>
           </li>
-          <li>
+          <li class="menu">
             <a href="#">For adopters</a>
           </li>
-          <li>
+          <li class="menu">
             <a href="#">Services</a>
           </li>
-          <li>
+          <li class="menu">
             <a href="#">Contact</a>
+          </li>
+          <li id="icon1">
+            <a href="#">
+              <i class="fa fa-search"></i>
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </a>
           </li>
         </ul>
       </div>
