finished home section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Petcare.uz</title>
+    <link rel="shortcut icon" type="image/x-icon" href="pics/paw.png" />
+    <title>petcare.uz</title>
     <!-- Icons -->
     <script
       src="https://kit.fontawesome.com/56fa1ef7a3.js"
@@ -15,7 +16,9 @@
   <body>
     <div id="header">
       <div class="container">
-        <img class="logo" src="pics\petcare_logo.png" alt="logo" />
+        <a href="#">
+          <img class="logo" src="pics\petcare_logo.png" alt="logo" />
+        </a>
         <!-- <div class="inner-width">
           <a href="#" class="logo"></a>
           <button class="menu-toggler">
@@ -71,6 +74,13 @@
           <i class="fa fa-home fa-3x"></i>
           <h1 class="intext">I want to rehome a pet</h1>
         </a>
+      </div>
+      <img id="cat" src="pics/cat.png" alt="cat" />
+    </div>
+    <div id="about">
+      <div class="container">
+        <h1 class="mini-headline">How It Works</h1>
+        <img id="line" src="pics/Line.png" alt="line" />
       </div>
     </div>
   </body>
