how it works section is done and waiting adoption section is added

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         <img id="dog" src="pics\dog.png" alt="dog" />
         <a class="button adopt">
           <i class="fa fa-search fa-3x"></i>
-
           <h1 class="intext">I want to adopt a pet</h1>
         </a>
         <a class="button rehome">
@@ -77,10 +76,35 @@
       </div>
       <img id="cat" src="pics/cat.png" alt="cat" />
     </div>
+
     <div id="about">
       <div class="container">
         <h1 class="mini-headline">How It Works</h1>
         <img id="line" src="pics/Line.png" alt="line" />
+        <div id="workstages">
+          <div class="item item-1">
+            <h1>Find Your Pet</h1>
+            <p>Select a pet from our adoption list</p>
+          </div>
+          <div class="item item-2">
+            <h1>Know Your Pet</h1>
+            <p>Read about your pet on a pet profile</p>
+          </div>
+          <div class="item item-3">
+            <h1>Get Your Pet</h1>
+            <p>Make a payment and your pet will be delivered</p>
+          </div>
+        </div>
+        <img id="dog2" src="pics/dog2.png" alt="dog2" />
+        <h1 id="waiting-adoption" class="mini-headline">Waiting Adoption</h1>
+        <div class="pets">
+          <a class="buttonpet">Cats</a>
+          <a class="buttonpet">Dogs</a>
+          <a class="buttonpet">Fish</a>
+          <a class="buttonpet">Birds</a>
+          <a class="buttonpet">Rabbits</a>
+        </div>
+        <div class="profile"></div>
       </div>
     </div>
   </body>
