--- a/index.html
+++ b/index.html
@@ -12,48 +12,44 @@
       src="https://kit.fontawesome.com/56fa1ef7a3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </head>
   <body>
-    <div id="header">
+    <header class="header">
       <div class="container">
-        <a href="#">
+        <nav class="nav">
           <img class="logo" src="pics\petcare_logo.png" alt="logo" />
-        </a>
-        <!-- <div class="inner-width">
-          <a href="#" class="logo"></a>
-          <button class="menu-toggler">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-        </div> -->
-        <ul class="navbar">
-          <li class="menu">
-            <a href="#">Home</a>
+          <!-- <div class="inner-width">
+            <a href="#" class="logo"></a>
+            <button class="menu-toggler">
+              <span></span>
+              <span></span>
+              <span></span>
+            </button>
+          </div> -->
+          <ul class="navbar">
+            <li class="menu">
+              <a href="#" id="homebutton">Home</a>
           </li>
           <li class="menu">
-            <a href="#">About</a>
+            <a href="#" id="aboutbutton">About</a>
           </li>
           <li class="menu">
-            <a href="#">For adopters</a>
+            <a href="#" id="servicesbutton">Services</a>
           </li>
           <li class="menu">
-            <a href="#">Services</a>
+            <a href="#" id="foradoptersbutton">For adopters</a>
           </li>
           <li class="menu last">
-            <a href="#">Contact</a>
+            <a href="#" id="contactbutton">Contact</a>
           </li>
           <li class="icon">
             <a href="#">
               <i class="fa fa-user"></i>
             </a>
           </li>
-          <li class="icon">
-            <a href="#">
-              <i class="fa fa-search"></i>
-            </a>
-          </li>
-        </ul>
+          </ul>
+          </nav>
       </div>
     </div>
 
