new version is created

--- a/newversion/ver2index.html
+++ b/newversion/ver2index.html
@@ -10,16 +10,16 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="ver2style.css" />
     <title>Bankist | When Banking meets Minimalist</title>
 
-    <script defer src="script.js"></script>
+    <script defer src="ver2script.js"></script>
   </head>
   <body>
     <header class="header">
       <nav class="nav">
         <img
-          src="img/logo.png"
+          src="pics/petcare_logo.png"
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
