--- a/index.html
+++ b/index.html
@@ -4,104 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="pics/paw.png" />
     <title>petcare.uz</title>
-    <!-- Icons -->
-    <script
-      src="https://kit.fontawesome.com/56fa1ef7a3.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="script.js"></script>
   </head>
-  <body>
-    <header class="header">
-      <div class="container">
-        <nav class="nav">
-          <img class="logo" src="pics\petcare_logo.png" alt="logo" />
-          <!-- <div class="inner-width">
-            <a href="#" class="logo"></a>
-            <button class="menu-toggler">
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
-          </div> -->
-          <ul class="navbar">
-            <li class="menu">
-              <a href="#" id="homebutton">Home</a>
-          </li>
-          <li class="menu">
-            <a href="#" id="aboutbutton">About</a>
-          </li>
-          <li class="menu">
-            <a href="#" id="servicesbutton">Services</a>
-          </li>
-          <li class="menu">
-            <a href="#" id="foradoptersbutton">For adopters</a>
-          </li>
-          <li class="menu last">
-            <a href="#" id="contactbutton">Contact</a>
-          </li>
-          <li class="icon">
-            <a href="#">
-              <i class="fa fa-user"></i>
-            </a>
-          </li>
-          </ul>
-          </nav>
-      </div>
-    </div>
-
-    <div id="home">
-      <div class="container">
-        <h1 id="headline">
-          <span id="rehome">Rehome,</span>
-          <span id="adopt">Adopt,</span>
-          <span id="love">Love</span>
-        </h1>
-        <img id="dog" src="pics\dog.png" alt="dog" />
-        <a class="button adopt">
-          <i class="fa fa-search fa-3x"></i>
-          <h1 class="intext">I want to adopt a pet</h1>
-        </a>
-        <a class="button rehome">
-          <i class="fa fa-home fa-3x"></i>
-          <h1 class="intext">I want to rehome a pet</h1>
-        </a>
-      </div>
-      <img id="cat" src="pics/cat.png" alt="cat" />
-    </div>
-
-    <div id="about">
-      <div class="container">
-        <h1 class="mini-headline">How It Works</h1>
-        <img id="line" src="pics/Line.png" alt="line" />
-        <div id="workstages">
-          <div class="item item-1">
-            <h1>Find Your Pet</h1>
-            <p>Select a pet from our adoption list</p>
-          </div>
-          <div class="item item-2">
-            <h1>Know Your Pet</h1>
-            <p>Read about your pet on a pet profile</p>
-          </div>
-          <div class="item item-3">
-            <h1>Get Your Pet</h1>
-            <p>Make a payment and your pet will be delivered</p>
-          </div>
-        </div>
-        <img id="dog2" src="pics/dog2.png" alt="dog2" />
-        <h1 id="waiting-adoption" class="mini-headline">Waiting Adoption</h1>
-        <div class="pets">
-          <a class="buttonpet">Cats</a>
-          <a class="buttonpet">Dogs</a>
-          <a class="buttonpet">Fish</a>
-          <a class="buttonpet">Birds</a>
-          <a class="buttonpet">Rabbits</a>
-        </div>
-        <div class="profile"></div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
