--- a/index.html
+++ b/index.html
@@ -11,5 +11,27 @@
     <link rel="stylesheet" href="style.css" />
     <title>petcare.uz</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="nav__header">
+        <div class="nav__logo">
+          <a href="#" class="logo"
+            ><img src="pics/petcare_logo.png" alt="petcare.uz"
+          /></a>
+        </div>
+        <div class="nav__menu__btn" id="menu-btn">
+          <i class="ri-menu-line"></i>
+        </div>
+      </div>
+      <ul class="nav__links" id="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#product">Product</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <div class="nav__profile" id="nav-profile">
+        <span><i class="ri-user-fill"></i></span>
+      </div>
+    </nav>
+  </body>
 </html>
