--- a/index.html
+++ b/index.html
@@ -28,10 +28,19 @@
         <li><a href="#about">About</a></li>
         <li><a href="#product">Product</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li>
+          <a href="#"><i class="ri-user-fill"></i></a>
+        </li>
       </ul>
-      <div class="nav__profile" id="nav-profile">
+      <!-- <div class="nav__profile" id="nav-profile">
         <span><i class="ri-user-fill"></i></span>
-      </div>
+      </div> -->
     </nav>
+
+    <header class="section__container header__container" id="home">
+      <div class="header__image">
+        <img src="" alt="header" />
+      </div>
+    </header>
   </body>
 </html>
