--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
         <li><a href="#about">About</a></li>
         <li><a href="#product">Product</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="#" id="login">Log in</a></li>
+        <li><a href="#" id="signup">Sign up</a></li>
         <li>
-          <a href="#"><i class="ri-user-fill"></i></a>
+          <a href="#" id="lang"><i class="ri-global-line"></i></a>
         </li>
       </ul>
-      <!-- <div class="nav__profile" id="nav-profile">
-        <span><i class="ri-user-fill"></i></span>
-      </div> -->
     </nav>
 
     <header class="section__container header__container" id="home">
-      <div class="header__image">
+      <div class="header__page">
         <img src="" alt="header" />
       </div>
     </header>
+
+    <script src="script.js"></script>
   </body>
 </html>
