--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
       </ul>
     </nav>
 
+    <div class="modal hidden">
+      <button class="close-modal">&times</button>
+      <h1>Choose a language</h1>
+      <button></button>
+    </div>
+
     <header class="section__container header__container" id="home">
       <div class="header__page">
         <img src="" alt="header" />
