--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="nav__header">
         <div class="nav__logo">
           <a href="#" class="logo"
-            ><img src="pics/petcare_logo.png" alt="petcare.uz"
+            ><img src="pics/Logo.png" alt="petcare.uz"
           /></a>
         </div>
         <div class="nav__menu__btn" id="menu-btn">
@@ -25,7 +25,7 @@
       </div>
       <ul class="nav__links" id="nav-links">
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about">About us</a></li>
         <li><a href="#product">Product</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#" id="login">Log in</a></li>
@@ -39,7 +39,11 @@
     <div class="modal hidden">
       <button class="close-modal">&times</button>
       <h1>Choose a language</h1>
-      <button></button>
+      <ul>
+        <li><a href="#">English</a></li>
+        <li><a href="#">Русский</a></li>
+        <li><a href="#">O'zbekcha</a></li>
+      </ul>
     </div>
 
     <header class="section__container header__container" id="home">
