language modal window done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         <li><a href="#" id="login">Log in</a></li>
         <li><a href="#" id="signup">Sign up</a></li>
         <li>
-          <a href="#" id="lang"><i class="ri-global-line"></i></a>
+          <a class="show-modal" id="lang">
+            <i class="ri-global-line"></i>
+          </a>
+          <!-- <button class="show-modal" id="lang">
+            <i class="ri-global-line"></i>
+          </button> -->
         </li>
       </ul>
     </nav>
@@ -45,6 +50,7 @@
         <li><a href="#">O'zbekcha</a></li>
       </ul>
     </div>
+    <div class="overlay hidden"></div>
 
     <header class="section__container header__container" id="home">
       <div class="header__page">
