lang pref background improvement on mobile display

--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
     <div class="overlay hidden"></div>
 
     <header class="section__container header__container" id="home">
-      <div class="header__page">
+      <div class="header__image">
+        <!-- <h1 class="home_headline headline_main">
+          Find Your Furry Friend, Shop Their Favorites, and Keep Them Healthy!
+        </h1>
+        <p class="home_headline headline_secondary">
+          Connecting pets with loving homes, premium products, and trusted vet
+          care—all in one place.
+        </p> -->
         <img src="" alt="header" />
       </div>
     </header>
