--- a/index.html
+++ b/index.html
@@ -54,14 +54,18 @@
 
     <header class="section__container header__container" id="home">
       <div class="header__image">
-        <!-- <h1 class="home_headline headline_main">
-          Find Your Furry Friend, Shop Their Favorites, and Keep Them Healthy!
-        </h1>
-        <p class="home_headline headline_secondary">
-          Connecting pets with loving homes, premium products, and trusted vet
-          care—all in one place.
-        </p> -->
-        <img src="" alt="header" />
+        <img src="petcare.uz\dog-cat-under-sheet.jpg" alt="header" />
+      </div>
+      <div class="header__content">
+        <div>
+          <h1>
+            Find Your Furry Friend, Shop Their Favorites, and Keep Them Healthy!
+          </h1>
+          <p>
+            Connecting pets with loving homes, premium products, and trusted vet
+            care—all in one place.
+          </p>
+        </div>
       </div>
     </header>
 
