nav hover underline effect

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>
       </div>
       <ul class="nav__links" id="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About us</a></li>
-        <li><a href="#product">Product</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a class="underline_anim under_ad" href="#home">Home</a></li>
+        <li><a class="underline_anim under_ad" href="#about">About us</a></li>
+        <li><a class="underline_anim under_ad" href="#product">Product</a></li>
+        <li><a class="underline_anim under_ad" href="#contact">Contact</a></li>
         <li><a href="#" id="login">Log in</a></li>
         <li><a href="#" id="signup">Sign up</a></li>
         <li>
