home page reveal

--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
       </div>
     </header>
 
+    <section class="section__contatiner deals__container">
+      <div class="deals__card">
+        <h2 class="section__header"></h2>
+      </div>
+    </section>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
   </body>
 </html>
