--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@
       </div>
     </header>
 
-    <section class="section__contatiner deals__container">
-      <div class="deals__card">
-        <h2 class="section__header"></h2>
+    <section class="section__contatiner about__container">
+      <div class="about__header">
+        <h2 class="section__header" id="about_headline">About petcare.uz</h2>
+      </div>
+      <div class="about__content">
+        <div class="about__image">
+          <img src="" alt="about" />
+        </div>
       </div>
     </section>
 
