--- a/index.html
+++ b/index.html
@@ -88,16 +88,50 @@
       </div>
     </header>
 
-    <section class="section__contatiner about__container">
+    <!-- <section class="section__contatiner about__container">
       <div class="about__header">
         <h2 class="section__header" id="about_headline">About petcare.uz</h2>
       </div>
       <div class="about__content">
         <div class="about__image">
-          <img src="" alt="about" />
+          <img src="petcare.uz/about_img.png" alt="about" />
+        </div>
+        <div class="about__grid">
+          <div class="about__card">
+            <h3>1.</h3>
+            <h4>Who we are</h4>
+            <p>
+              We’re a team of animal enthusiasts building a community where pets
+              and their families thrive.
+            </p>
+          </div>
+          <div class="about__card">
+            <h3>1.</h3>
+            <h4>Who we are</h4>
+            <p>
+              We’re a team of animal enthusiasts building a community where pets
+              and their families thrive.
+            </p>
+          </div>
+          <div class="about__card">
+            <h3>1.</h3>
+            <h4>Who we are</h4>
+            <p>
+              We’re a team of animal enthusiasts building a community where pets
+              and their families thrive.
+            </p>
+          </div>
+          <div class="about__card">
+            <h3>1.</h3>
+            <h4>Who we are</h4>
+            <p>
+              We’re a team of animal enthusiasts building a community where pets
+              and their families thrive.
+            </p>
+          </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
