--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
     </header>
 
-    <!-- <section class="section__contatiner about__container">
+    <section class="section__contatiner about__container">
       <div class="about__header">
         <h2 class="section__header" id="about_headline">About petcare.uz</h2>
       </div>
@@ -131,7 +131,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
