about section 3.0 and navbar fixations

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
       </div>
       <ul class="nav__links" id="nav-links">
         <li>
-          <a class="underline_anim under_ad" id="home" href="#home">Home</a>
+          <a class="underline_anim under_ad" id="homeBtn" href="#home">Home</a>
         </li>
         <li>
-          <a class="underline_anim under_ad" id="about" href="#about"
+          <a class="underline_anim under_ad" id="aboutBtn" href="#about"
             >About us</a
           >
         </li>
         <li>
-          <a class="underline_anim under_ad" id="services" href="#services"
+          <a class="underline_anim under_ad" id="servicesBtn" href="#services"
             >Services</a
           >
         </li>
         <li>
-          <a class="underline_anim under_ad" id="contact" href="#contact"
+          <a class="underline_anim under_ad" id="contactBtn" href="#contact"
             >Contact us</a
           >
         </li>
@@ -88,9 +88,14 @@
       </div>
     </header>
 
-    <section class="section__contatiner about__container">
+    <section class="section__container about__container" id="about">
       <div class="about__header">
         <h2 class="section__header" id="about_headline">About petcare.uz</h2>
+        <p class="section__description">
+          At petcare.uz, we’re passionate about pets and the people who love
+          them, delivering a seamless experience for adoption, supplies, and
+          care.
+        </p>
       </div>
       <div class="about__content">
         <div class="about__image">
@@ -99,41 +104,43 @@
         <div class="about__grid">
           <div class="about__card">
             <h3>1.</h3>
-            <h4>Who we are</h4>
-            <p>
-              We’re a team of animal enthusiasts building a community where pets
-              and their families thrive.
+            <h4 id="whoWeAre">Who we are</h4>
+            <p id="whoWeAreDsc">
+              We are a team of animal enthusiasts building a community where
+              pets and their families thrive.
             </p>
           </div>
           <div class="about__card">
-            <h3>1.</h3>
-            <h4>Who we are</h4>
-            <p>
-              We’re a team of animal enthusiasts building a community where pets
-              and their families thrive.
+            <h3>2.</h3>
+            <h4 id="whatWeDo">What we do</h4>
+            <p id="whatWeDoDsc">
+              We connect pets with homes, sell quality pet products, and offer
+              expert vet services—all in one place.
             </p>
           </div>
           <div class="about__card">
-            <h3>1.</h3>
-            <h4>Who we are</h4>
+            <h3>3.</h3>
+            <h4>How we help</h4>
             <p>
-              We’re a team of animal enthusiasts building a community where pets
-              and their families thrive.
+              We simplify adoption and rehoming, provide essentials, and ensure
+              pets stay healthy with trusted care.
             </p>
           </div>
           <div class="about__card">
-            <h3>1.</h3>
-            <h4>Who we are</h4>
+            <h3>4.</h3>
+            <h4>Why choose us</h4>
             <p>
-              We’re a team of animal enthusiasts building a community where pets
-              and their families thrive.
+              With compassion, convenience, and a love for pets, we’re your
+              go-to for everything pet-related.
             </p>
           </div>
         </div>
       </div>
     </section>
 
+    section
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
+    <script src="languages.json"></script>
   </body>
 </html>
