--- a/indexfull.html
+++ b/indexfull.html
@@ -24,7 +24,7 @@
         --extra-light: #946d43;
         --white: #ecdbc1;
         --dirty-white: #b7966b;
-        --max-width: 1400px;
+        --max-width: 1200px;
         --header-font: 'Nunito', serif;
       }
 
@@ -103,9 +103,9 @@
         border-radius: 5px;
         padding: 5px 8px;
         /* padding-left: 4px;
-        padding-top: 5px;
-        padding-right: 4px;
-        padding-bottom: 2px; */
+  padding-top: 5px;
+  padding-right: 4px;
+  padding-bottom: 2px; */
         font-size: 18px;
         font-weight: 100;
         color: rgb(105, 81, 49);
@@ -148,8 +148,8 @@
       }
 
       /* .nav__logo .logo {
-        color: var(--white);
-      } */
+  color: var(--white);
+} */
 
       .nav__menu__btn {
         font-size: 1.5rem;
@@ -327,9 +327,9 @@
         grid-area: 1/1/2/2;
         display: flex;
         /* background-color: var(--white);
-        width: 100%;
-        margin: auto;
-        height: 400px; */
+  width: 100%;
+  margin: auto;
+  height: 400px; */
         align-items: center;
       }
 
@@ -353,11 +353,44 @@
         color: var(--text-light);
       }
 
+      .about__header {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+      }
+
+      .about__content {
+        margin-top: 2rem;
+        display: grid;
+        gap: 2rem;
+      }
+
+      .about__grid {
+        display: grid;
+        gap: 2rem;
+      }
+
+      .about__image {
+        overflow: hidden;
+      }
+
+      .about__card h3 {
+        margin-bottom: 0.5rem;
+        font-size: 2.5rem;
+        font-weight: 600;
+        color: var(--primary-color);
+      }
+
+      @media (width > 540px) {
+        /*  */
+      }
+
       @media (width > 768px) {
         nav {
           position: sticky;
-          overflow: hidden;
           padding: 2rem 1rem;
+          width: 100%;
+          top: 0;
           display: flex;
           align-items: center;
           justify-content: space-between;
@@ -365,6 +398,7 @@
           font-size: 18px;
           font-family: var(--header-font);
           font-weight: 600;
+          background-color: rgb(255, 255, 255);
         }
 
         .nav__header {
@@ -378,11 +412,13 @@
         }
 
         .section__container {
-          padding: 0rem 1rem;
+          padding: 5rem 1rem;
+          max-width: var(--max-width);
+          margin: auto;
         }
 
         /* .nav__logo .logo {
-          /* color: var(--primary-color); */
+    /* color: var(--primary-color); */
         /* }  */
 
         .nav__links {
@@ -390,7 +426,7 @@
           padding: 0;
           width: fit-content;
           flex-direction: row;
-          gap: 2rem;
+          gap: 1.5rem;
           background-color: transparent;
           transform: none;
         }
