--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <div class="nav__header">
         <div class="nav__logo">
-          <a href="#" class="logo"
+          <a href="#home" class="logo"
             ><img src="pics/Logo.png" alt="petcare.uz"
           /></a>
         </div>
@@ -45,7 +45,7 @@
           >
         </li>
         <li><a href="#" id="login">Log in</a></li>
-        <li><a href="#" id="signup">Sign up</a></li>
+        <!-- <li><a href="#" id="signup">Sign up</a></li> -->
         <li>
           <a class="show-modal" id="lang">
             <i class="ri-global-line"></i>
@@ -197,6 +197,23 @@
             </div>
             <button class="card-button">Book a visit</button>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer" id="contact">
+      <div class="section__container footer__container">
+        <div class="footer__col">
+          <div class="footer__logo">
+            <a href="#home" class="logo"
+              ><img src="pics/Logo.png" alt="petcare.uz"
+            /></a>
+          </div>
+          <p id="footerLogoText">
+            From Adoption to Vet Care – We’ve Got It Covered
+          </p>
+          <ul class="footer__socials">
+            <li><a href="#"></a></li>
+          </ul>
         </div>
       </div>
     </section>
