--- a/index.html
+++ b/index.html
@@ -200,23 +200,34 @@
         </div>
       </div>
     </section>
-    <section class="footer" id="contact">
+
+    <footer class="footer" id="contact">
       <div class="section__container footer__container">
-        <div class="footer__col">
-          <div class="footer__logo">
-            <a href="#home" class="logo"
-              ><img src="pics/Logo.png" alt="petcare.uz"
-            /></a>
-          </div>
+        <div class="footer__logo">
+          <img src="pics/Logo.png" alt="petcare.uz" />
           <p id="footerLogoText">
             From Adoption to Vet Care – We’ve Got It Covered
           </p>
-          <ul class="footer__socials">
-            <li><a href="#"></a></li>
-          </ul>
+        </div>
+
+        <div class="footer__col">
+          <h4 id="support">
+            Support: <a href="" id="email">info@petcare.uz</a>
+          </h4>
+          <div class="footer__socials">
+            <h4 id="follow-us-at">Follow us at:</h4>
+            <ul class="footer__links">
+              <li>
+                <a href="#"><i class="ri-telegram-fill"></i></a>
+                <a href="#"><i class="ri-pinterest-fill"></i></a>
+                <a href="#"><i class="ri-mail-fill"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </section>
+      <div class="footer__bar">© 2025 Petcare.uz</div>
+    </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
